# image2speech-te

./: .dockerignore  .editorconfig  .gitattributes  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  compose.yaml  cspell.json  mypy.ini  pyproject.toml
docs/: Presentation-1.pptx
image2speech_te/: __main__.py  audio.py  ocr.py  tts.py
