[tool.poetry]
name = "image2speech-te"
version = "0.1.0"
description = "Translation of Telugu text images to speech."
authors = ["Avinash Maddikonda <svasssakavi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytesseract = "^0.3.10"
gtts = "^2.4.0"
sounddevice = "^0.4.6"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pylint = "^3.0.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
